101_distributed_scheduling/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  namespace: default
  annotations:
    distributed-scheduling/min-available: "1"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-deployment
  template:
    metadata:
      labels:
        app: test-deployment
    spec:
      containers:
      - name: pause
        image: k8s.gcr.io/pause:3.9
