101_distributed_scheduling/test/kind-config.yaml
kind: Cluster
apiVersion: kind.x-k8s.io/v1alpha4
containerdConfigPatches:
- |-
  [plugins."io.containerd.grpc.v1.cri".registry.mirrors."localhost:5001"]
    endpoint = ["http://registry:5000"]
nodes:
- role: control-plane
- role: worker
  labels:
    node.kubernetes.io/capacity: on-demand
- role: worker
  labels:
    node.kubernetes.io/capacity: spot
