101_distributed_scheduling/test/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webhook-demo
---
apiVersion: v1
kind: Secret
metadata:
  name: webhook-certs
  namespace: webhook-demo
type: Opaque
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURvRENDQW9pZ0F3SUJBZ0lVQk16YXNpMHhwU1I0OUl3SDNKZ3ZFSjBnaXI4d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0tqRW9NQ1lHQTFVRUF3d2ZRV1J0YVhOemFXOXVJRU52Ym5SeWIyeHNaWElnVjJWaWFHOXZheUJEUVRBZQpGdzB5TlRBNU1qZ3dOalUzTlROYUZ3MHpOVEE1TWpZd05qVTNOVE5hTUNjeEpUQWpCZ05WQkFNTUhIZGxZbWh2CmIyc3RjM1pqTG5kbFltaHZiMnN0WkdWdGJ5NXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXcKZ2dFS0FvSUJBUURBSVhZczBtWlRzbmM4TUtmK0UvOUIxbHd5MURxUkMyaXFDcTM0cngvSlBrUHhIMjFBdEU4Mgo4TGdZdkFVZUZBa3VSZ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRREFJWFlzMG1aVHNuYzgKTUtmK0UvOUIxbHd5MURxUkMyaXFDcTM0cngvSlBrUHhIMjFBdEU4MjhMZ1l2QVVlRkFrdVJnZXprRTFzWmxVQgoySDFqWkJ4N2NGTXZ1QnpWOHArU3hhYlViSW1mUUJCc29LVEFrb0J3SFJXdXR0UERpUURLNGljZEFQKzkrNElpCnZjdHd4Y2hHQUc5WkZTTG02SnFFUmo0dTliQ0JVUXd2Ujg4UzdqcmNXcTRIWHVpSURZN3p1TkZNQjVVTGsxeGkKRXhvK1AycWgxSk45cXN4eE1XNFVrZUlzb1RsVjcxUTdyYzgzQTI5d2hGVjlCZWRKVERZai9vQmNCY09BT0g1cgpERHR4NWdhTzI2UE0vO [...]
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: webhook-sa
  namespace: webhook-demo
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: webhook-role
rules:
- apiGroups: [""]
  resources: ["pods"]
  verbs: ["get", "list", "watch"]
- apiGroups: ["apps"]
  resources: ["deployments", "replicasets", "statefulsets"]
  verbs: ["get", "list", "watch"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: webhook-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: webhook-role
subjects:
- kind: ServiceAccount
  name: webhook-sa
  namespace: webhook-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook
  namespace: webhook-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
  template:
    metadata:
      labels:
        app: webhook
    spec:
      serviceAccountName: webhook-sa
      containers:
      - name: webhook
        image: localhost:5001/distributed-scheduling:latest
        ports:
        - containerPort: 8443
        volumeMounts:
        - name: tls
          mountPath: /tls
          readOnly: true
        imagePullPolicy: Always
      volumes:
      - name: tls
        secret:
          secretName: webhook-certs
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-svc
  namespace: webhook-demo
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    app: webhook
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-label-webhook
webhooks:
- name: podlabel.webhook.demo
  admissionReviewVersions: ["v1"]
  sideEffects: None
  clientConfig:
    service:
      name: webhook-svc
      namespace: webhook-demo
      path: "/mutate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUROVENDQWgyZ0F3SUJBZ0lVQnoyYzUwenFJT0tldHY4MHkzSkNVeHRIcDVvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0tqRW9NQ1lHQTFVRUF3d2ZRV1J0YVhOemFXOXVJRU52Ym5SeWIyeHNaWElnVjJWaWFHOXZheUJEUVRBZQpGdzB5TlRBNU1qZ3dOalUzTlROYUZ3MHpOVEE1TWpZd05qVTNOVE5hTUNveEtEQW1CZ05WQkFNTUgwRmtiV2x6CmMybHZiaUJEYjI1MGNtOXNiR1Z5SUZkbFltaHZiMnNnUTBFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUIKRHdBd2dnRUtBb0lCQVFEUU01MmxYZU9McG90a2VHL29mWjE1WHNMR3dRcEUybk9lcm1EblRURjNjVFpDMVVjQQpmZTRKQ0tHMEhENm [...]
  rules:
  - operations: ["CREATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
